<resources>
    <string name="app_name">HotiFi</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="facebook_app_id">194688711814079</string>
    <string name="fb_login_protocol_scheme">fb194688711814079</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="hotifi">HotiFi</string>
    <string name="create_account">Create Account</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="profile_pic">profile_pic</string>
    <string name="first_name">first name</string>
    <string name="wifi_name">wifi name</string>
    <string name="signal_strength">signal strength</string>
    <string name="find_hotspots">Find Hotspots</string>
    <string name="sell_data">Sell Data</string>
    <string name="home">Home</string>
    <string name="leadership_board">Leadership Board</string>
    <string name="profile">Profile</string>
    <string name="available_hotspots">Available Hotspots</string>
    <string name="sell_internet">Sell Internet</string>
    <string name="set_your_wifi_name">Set your wifi name</string>
    <string name="free_wifi">Free Wifi</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="set_up_a_price">Set up a price</string>
    <string name="enter_data">Enter Data</string>
    <string name="enter_price">Enter price</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="connected_to_seller_name">Connected to [seller name]</string>
    <string name="upload_speed">Upload speed</string>
    <string name="download_speed">Download speed</string>
    <string name="charge">Charge</string>
    <string name="data_used">Data used</string>
    <string name="disconnect">Disconnect</string>
    <string name="history">History</string>
    <string name="earnings">Earnings</string>
    <string name="usage">Usage</string>
    <string name="payment_options">Payment Options</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="report_issue_contact">Report issue/ Contact</string>
    <string name="rate_us_in_playstore">Rate us in playstore</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="server_client_id" />
</resources>
